# gtm-agent

./: .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  README.md  langgraph.json
.claude/skills/gtm-agent-context/: SKILL.md
.github/workflows/: ci.yml  release.yml
apps/agent/: README.md  pyproject.toml
apps/agent/src/gtm_agent/: __init__.py  agent.py  api.py  prompts.py  schemas.py
apps/agent/src/gtm_agent/subagents/: __init__.py  escalator.py  narrative.py  voice_cloner.py
apps/agent/src/gtm_agent/tools/: __init__.py  artifacts.py  diagnostic.py  scorecard.py  web_fetch.py
apps/agent/tests/: __init__.py  conftest.py
apps/agent/tests/e2e/: __init__.py  test_artifact_generation.py  test_critical_pathway.py  test_diagnostic_flow.py  test_jtbd_evaluation.py  test_multi_turn.py
apps/agent/tests/integration/: __init__.py  test_single_step.py
apps/agent/tests/unit/: __init__.py  test_prompts.py  test_schemas.py  test_tools.py
apps/web/: .env.example  index.html  package-lock.json  package.json
apps/web/src/: App.tsx  index.css  types.ts
apps/web/src/components/: ArtifactList.tsx  ChatMessage.tsx  OptionButtons.tsx  Scorecard.tsx  StartScreen.tsx  index.ts
apps/web/src/hooks/: useGTMAgent.ts
docs/: diagnostic-questions.md
